--- a/Desktop/rentappv20/src/app/globals.css
+++ b/Desktop/rentappv20/src/app/globals.css
@@ -53,3 +53,49 @@ body {
   line-height: 1.5;
 }
 
+/* Hide scrollbar but allow scrolling - comprehensive rules */
+.hide-scrollbar {
+  scrollbar-width: none !important; /* Firefox */
+  -ms-overflow-style: none !important; /* Internet Explorer 10+ */
+  scrollbar-color: transparent transparent !important; /* Firefox fallback */
+}
+
+/* Chrome, Safari, Edge - hide scrollbar completely */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none !important;
+  width: 0px !important;
+  height: 0px !important;
+  background: transparent !important;
+  -webkit-appearance: none !important;
+  appearance: none !important;
+}
+
+.hide-scrollbar::-webkit-scrollbar-track {
+  display: none !important;
+  background: transparent !important;
+  -webkit-box-shadow: none !important;
+  box-shadow: none !important;
+}
+
+.hide-scrollbar::-webkit-scrollbar-thumb {
+  display: none !important;
+  background: transparent !important;
+  border: none !important;
+  -webkit-box-shadow: none !important;
+  box-shadow: none !important;
+}
+
+.hide-scrollbar::-webkit-scrollbar-corner {
+  display: none !important;
+  background: transparent !important;
+}
+
+/* For all states and pseudo-classes */
+.hide-scrollbar:hover::-webkit-scrollbar,
+.hide-scrollbar:active::-webkit-scrollbar,
+.hide-scrollbar:focus::-webkit-scrollbar {
+  display: none !important;
+  width: 0px !important;
+  height: 0px !important;
+}
+
